[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
syn = { version = "1.0.60", features = ["full", "extra-traits"] }
quote = "1.0.23"
serde_json = "1.0.93"
proc-macro2 = "1.0"
serde = { version = "1.0.152 ", features = ["derive"] }
regex = "1.7.1"
my_types = { path = "../types"}

[lib]
proc-macro = true
